--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -3,10 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Pattern_MVVM"
+        xmlns:l="clr-namespace:Pattern_MVVM"
+        xmlns:vm="clr-namespace:Pattern_MVVM.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding Title}" 
+        Height="450" 
+        Width="800">
+    <!--Подключаем прослойку контекста данных и инициализуруем ее-->
+    <Window.DataContext>
+        <vm:MainWindowViewModel/>
+    </Window.DataContext>
     <Grid>
-        
+        <TextBox Height="20"
+                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="36,16"/>
     </Grid>
 </Window>
