--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -13,9 +13,54 @@
     <Window.DataContext>
         <vm:MainWindowViewModel/>
     </Window.DataContext>
-    <Grid>
-        <TextBox Height="20"
-                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}"
-                 Margin="36,16"/>
-    </Grid>
+    <DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Файл">
+                <MenuItem Header="Выход"/>
+            </MenuItem>
+            <MenuItem Header="Помощь">
+                <MenuItem Header="О программе"/>
+            </MenuItem>
+        </Menu>
+        <StatusBar DockPanel.Dock="Bottom">
+            <StatusBarItem>
+                <TextBlock Text="1234"
+                           MinWidth="150"
+                           MaxWidth="350"/>
+            </StatusBarItem>
+            <StatusBarItem>
+                <ProgressBar Width="120" Height="14" Value="30">                    
+                </ProgressBar>
+            </StatusBarItem>
+        </StatusBar>
+        <TabControl>
+            <TabItem Header="Вкладка 1">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="106*"/>
+                        <RowDefinition Height="267*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="57*"/>
+                        <ColumnDefinition Width="205*"/>
+                    </Grid.ColumnDefinitions>
+                    <Rectangle Fill="Blue"
+                               Grid.Column="0"
+                               Grid.Row="0"
+                               Margin="5,7"
+                               Stroke="Red"
+                               StrokeThickness="2"
+                               RadiusX="5"
+                               RadiusY="7"/>
+                    <Ellipse Grid.Column="1"
+                             Grid.Row="0"
+                             Fill="Red" 
+                             Stroke="Blue"
+                             StrokeThickness="3"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Вкладка 2">
+            </TabItem>
+        </TabControl>
+    </DockPanel>
 </Window>
