--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:l="clr-namespace:Pattern_MVVM"
+        xmlns:cmd="clr-namespace:Pattern_MVVM.Infrastructure.Commands"
         xmlns:vm="clr-namespace:Pattern_MVVM.ViewModels"
         mc:Ignorable="d"
         Title="{Binding Title}" 
@@ -16,8 +17,13 @@
     <DockPanel>
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="Файл">
-                <MenuItem Header="Выход"
-                          Command="{Binding CloseApplicationCommand}"/>
+                <!--<MenuItem Header="Выход"
+                          Command="{Binding CloseApplicationCommand}"/>-->
+                <MenuItem Header="Выход">
+                    <MenuItem.Command>
+                        <cmd:CloseApplicationCommand/>
+                    </MenuItem.Command>
+                </MenuItem>
             </MenuItem>
             <MenuItem Header="Помощь">
                 <MenuItem Header="О программе"/>
