--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:l="clr-namespace:Pattern_MVVM"
         xmlns:cmd="clr-namespace:Pattern_MVVM.Infrastructure.Commands"
         xmlns:vm="clr-namespace:Pattern_MVVM.ViewModels"
+        xmlns:fa="http://schemas.fontawesome.io/icons/"
         mc:Ignorable="d"
         Title="{Binding Title}" 
         Height="450" 
@@ -41,7 +42,16 @@
             </StatusBarItem>
         </StatusBar>
         <TabControl>
-            <TabItem Header="Вкладка 1">
+            <TabItem >
+                <TabItem.Header>
+                    <StackPanel Orientation="Horizontal">
+                        <fa:ImageAwesome Icon="FileOutline" 
+                                         Margin="0,0,5,0"
+                                         Height="13"
+                                         Foreground="Red"/>
+                        <TextBlock Text="Вкладка 1"/>
+                    </StackPanel>
+                </TabItem.Header>
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="106*"/>
@@ -63,7 +73,12 @@
                              Grid.Row="0"
                              Fill="Red" 
                              Stroke="Blue"
-                             StrokeThickness="3"/>
+                             StrokeThickness="3">
+                        <Ellipse.InputBindings>
+                            <MouseBinding Command="{Binding CloseApplicationCommand}" 
+                                MouseAction="LeftDoubleClick"/>
+                        </Ellipse.InputBindings>
+                    </Ellipse>
                     <GridSplitter Grid.Column="0"
                                   Grid.RowSpan="2"
                                   HorizontalAlignment="Right"
