--- a/Views/Windows/MainWindow.xaml
+++ b/Views/Windows/MainWindow.xaml
@@ -63,12 +63,27 @@
                         <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <GroupBox Header="Группы">
-                        <ListBox ItemsSource="{Binding Groups}" DisplayMemberPath="Name"/>
+                        <ListBox ItemsSource="{Binding Groups}" 
+                                 DisplayMemberPath="Name"
+                                 SelectedIndex="0"
+                                 SelectedItem="{Binding SelectedGroup}"/>
                     </GroupBox>
                     <GroupBox Grid.Column="1"
-                              Header="Студенты">
-                        <DataGrid>
-                            
+                              Header="{Binding SelectedGroup.Name,
+                        FallbackValue='Студенты',
+                        TargetNullValue='Группа не выбрана'}">
+                        <DataGrid ItemsSource="{Binding SelectedGroup.Students}"
+                                  AutoGenerateColumns="False"
+                                  IsReadOnly="True">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Header="Фамилия" Binding="{Binding Surname}"/>
+                                <DataGridTextColumn Header="Имя" Binding="{Binding Name}"/>
+                                <DataGridTextColumn Header="Отчество" Binding="{Binding Patronymic}"/>
+                                <DataGridTextColumn Header="Рейтинг" Binding="{Binding Rating}"/>
+                                <DataGridTextColumn Header="Дата рождения" Binding="{Binding Birthday,StringFormat='dd.MM.yyyy'}"/>
+                                <DataGridTextColumn Header="Группа" Binding="{Binding DataContext.SelectedGroup.Name,
+                                    RelativeSource={RelativeSource AncestorType=DataGrid} }"/>
+                            </DataGrid.Columns>                            
                         </DataGrid>
                     </GroupBox>
                 </Grid>
